# 142A-Project

./: README.md  pyproject.toml  requirements.txt
dataset/stocks/: NVIDIA.csv  PALANTIR.csv  TQQQ.csv  TSLA.csv
src/: index.py  index2.py  index3 copy.py  index4.py  main.py
src/dashborad/: package.json
src/dashborad/src/app/: layout.tsx  page.tsx
src/dashborad/src/public/: result.json
src/utils/: crawler.py  sentiment-analyzer.py
